# product_classification

./: Makefile  README.md  pyproject.toml
cli/: cli_inference.py  cli_preprocessing.py  cli_train.py
config/model/: dev.yml
data/cleaned_data/test/: search_data.csv  search_data_prediction_file.csv
data/cleaned_data/train/: productview_training_data.csv
notebook/: Untitled1.ipynb  category_multiclass_classification.ipynb
notebook/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
predict_category/modules/common/: constants.py  functions.py
predict_category/modules/inference/: inference.py
predict_category/modules/preprocessing/: text_preprocessing.py
predict_category/modules/training/: train.py
